files/script/test/parse_error/var/test_var_error4.nl



def main(var )
{

}
#script("test/parse_error/var/test_var_error4.nl")